--- a/bin/application/MainScene.fxml
+++ b/bin/application/MainScene.fxml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainSceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainSceneController">
    <children>
-      <Label layoutX="14.0" layoutY="27.0" prefHeight="17.0" prefWidth="429.0" text="Title" />
-      <TextField fx:id="tfTitle" layoutX="14.0" layoutY="67.0" onAction="#tfTitle" prefHeight="25.0" prefWidth="420.0" />
-      <Button layoutX="185.0" layoutY="354.0" mnemonicParsing="false" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="79.0" text="OK" />
+      <Label layoutX="14.0" layoutY="27.0" prefHeight="17.0" prefWidth="429.0" text="Username:">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <TextField fx:id="usernameTextField" layoutX="14.0" layoutY="67.0" onAction="#usernameTextField" prefHeight="25.0" prefWidth="420.0" />
+      <Button layoutX="185.0" layoutY="354.0" mnemonicParsing="false" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="79.0" text="Login" />
+      <Label layoutX="14.0" layoutY="123.0" prefHeight="17.0" prefWidth="429.0" text="Password:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="passwordTextField" accessibleRole="PASSWORD_FIELD" layoutX="14.0" layoutY="158.0" onAction="#passwordTextField" prefHeight="25.0" prefWidth="420.0">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets></TextField>
    </children>
 </AnchorPane>
