--- a/src/application/MainScene.fxml
+++ b/src/application/MainScene.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -20,9 +20,6 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="passwordTextField" accessibleRole="PASSWORD_FIELD" layoutX="14.0" layoutY="158.0" onAction="#passwordTextField" prefHeight="25.0" prefWidth="420.0">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets></TextField>
+      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#passwordTextField" prefHeight="25.0" prefWidth="420.0" />
    </children>
 </AnchorPane>
