--- a/bin/application/MainScene.fxml
+++ b/bin/application/MainScene.fxml
@@ -13,13 +13,13 @@
          <font>
             <Font size="18.0" />
          </font></Label>
-      <TextField fx:id="usernameTextField" layoutX="14.0" layoutY="67.0" onAction="#usernameTextField" prefHeight="25.0" prefWidth="420.0" />
+      <TextField fx:id="usernameTextField" layoutX="14.0" layoutY="67.0" onAction="#usernameTextField" prefHeight="25.0" prefWidth="420.0" text="Noah_12320@hotmail.com" />
       <Label layoutX="14.0" layoutY="123.0" prefHeight="17.0" prefWidth="429.0" text="Password:">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#passwordTextField" prefHeight="25.0" prefWidth="420.0" />
+      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#passwordTextField" prefHeight="25.0" prefWidth="420.0" text="Tony_rocks" />
       <Button layoutX="185.0" layoutY="354.0" mnemonicParsing="false" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="79.0" text="Login" />
    </children>
 </AnchorPane>
