--- a/bin/application/MainScene.fxml
+++ b/bin/application/MainScene.fxml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainSceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainSceneController">
    <children>
       <Label layoutX="14.0" layoutY="27.0" prefHeight="17.0" prefWidth="429.0" text="Username:">
          <font>
             <Font size="18.0" />
          </font></Label>
-      <TextField fx:id="usernameTextField" layoutX="14.0" layoutY="67.0" onAction="#usernameTextField" prefHeight="25.0" prefWidth="420.0" text="Noah_12320@hotmail.com" />
+      <TextField fx:id="usernameTextField" layoutX="14.0" layoutY="67.0" onAction="#usernameTextField" prefHeight="25.0" prefWidth="420.0" />
       <Label layoutX="14.0" layoutY="123.0" prefHeight="17.0" prefWidth="429.0" text="Password:">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#passwordTextField" prefHeight="25.0" prefWidth="420.0" text="Tony_rocks" />
+      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#passwordTextField" prefHeight="25.0" prefWidth="420.0" />
       <Button layoutX="185.0" layoutY="354.0" mnemonicParsing="false" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="79.0" text="Login" />
+      <Label layoutX="20.0" layoutY="200.0" text="From Date:" />
+      <DatePicker fx:id="fromDate" layoutX="20.0" layoutY="223.0" />
+      <Label layoutX="222.0" layoutY="200.0" text="To Date:" />
+      <DatePicker fx:id="toDate" layoutX="222.0" layoutY="223.0" />
    </children>
 </AnchorPane>
