Add enter action

--- a/src/application/MainScene.fxml
+++ b/src/application/MainScene.fxml
@@ -19,7 +19,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#passwordTextField" prefHeight="25.0" prefWidth="420.0" />
+      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="420.0" />
       <Button layoutX="185.0" layoutY="354.0" mnemonicParsing="false" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="79.0" text="Login" />
    </children>
 </AnchorPane>
