--- a/bin/application/MainScene.fxml
+++ b/bin/application/MainScene.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainSceneController">
    <children>
       <Label layoutX="14.0" layoutY="27.0" prefHeight="17.0" prefWidth="429.0" text="Username:">
          <font>
@@ -20,7 +19,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#passwordTextField" prefHeight="25.0" prefWidth="420.0" />
+      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="420.0" />
       <Button layoutX="185.0" layoutY="354.0" mnemonicParsing="false" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="79.0" text="Login" />
       <Label layoutX="20.0" layoutY="200.0" text="From Date:" />
       <DatePicker fx:id="fromDate" layoutX="20.0" layoutY="223.0" />
