--- a/src/application/DisplayDataScene.fxml
+++ b/src/application/DisplayDataScene.fxml
@@ -10,8 +10,11 @@
       <Label layoutX="229.0" layoutY="14.0" text="To:" />
       <Label layoutX="14.0" layoutY="79.0" text="Money Earned:" />
       <Label fx:id="fromDateLabel" layoutX="68.0" layoutY="14.0" text="Label" />
-      <ListView fx:id="shiftsLabel" editable="true" layoutX="37.0" layoutY="122.0" prefHeight="200.0" prefWidth="200.0" />
+      <ListView fx:id="shiftOccurrenceListView" editable="true" layoutX="14.0" layoutY="123.0" prefHeight="200.0" prefWidth="200.0" />
       <Label fx:id="toDateLabel" layoutX="251.0" layoutY="14.0" text="Label" />
       <Label fx:id="moneyEarnedLabel" layoutX="104.0" layoutY="79.0" text="Label" />
+      <Label layoutX="14.0" layoutY="55.0" prefHeight="17.0" prefWidth="72.0" text="Total Shifts:" />
+      <Label fx:id="totalShiftsLabel" layoutX="104.0" layoutY="55.0" text="Label" />
+      <ListView fx:id="dayOccurrenceListView" editable="true" layoutX="229.0" layoutY="123.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
