--- a/bin/application/DisplayDataScene.fxml
+++ b/bin/application/DisplayDataScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,11 +11,12 @@
       <Label layoutX="229.0" layoutY="14.0" text="To:" />
       <Label layoutX="14.0" layoutY="79.0" text="Money Earned:" />
       <Label fx:id="fromDateLabel" layoutX="68.0" layoutY="14.0" text="Label" />
-      <ListView fx:id="shiftOccurrenceListView" editable="true" layoutX="14.0" layoutY="123.0" prefHeight="200.0" prefWidth="200.0" />
+      <ListView fx:id="shiftOccurrenceListView" editable="true" layoutX="237.0" layoutY="142.0" prefHeight="200.0" prefWidth="200.0" />
       <Label fx:id="toDateLabel" layoutX="251.0" layoutY="14.0" text="Label" />
       <Label fx:id="moneyEarnedLabel" layoutX="104.0" layoutY="79.0" text="Label" />
       <Label layoutX="14.0" layoutY="55.0" prefHeight="17.0" prefWidth="72.0" text="Total Shifts:" />
       <Label fx:id="totalShiftsLabel" layoutX="104.0" layoutY="55.0" text="Label" />
-      <ListView fx:id="dayOccurrenceListView" editable="true" layoutX="229.0" layoutY="123.0" prefHeight="200.0" prefWidth="200.0" />
+      <ListView fx:id="dayOccurrenceListView" editable="true" layoutX="18.0" layoutY="142.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button layoutX="287.0" layoutY="109.0" mnemonicParsing="false" onAction="#btnSortToggleShiftsClicked" text="Sort Toggle" />
    </children>
 </AnchorPane>
