--- a/bin/application/MainScene.fxml
+++ b/bin/application/MainScene.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -14,17 +16,20 @@
          <font>
             <Font size="18.0" />
          </font></Label>
-      <TextField fx:id="usernameTextField" layoutX="14.0" layoutY="67.0" onAction="#usernameTextField" prefHeight="25.0" prefWidth="420.0" />
+      <TextField fx:id="usernameTextField" layoutX="14.0" layoutY="67.0" onAction="#usernameTextField" prefHeight="25.0" prefWidth="420.0" text="" />
       <Label layoutX="14.0" layoutY="123.0" prefHeight="17.0" prefWidth="429.0" text="Password:">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="420.0" />
+      <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="420.0" text="" />
       <Button layoutX="185.0" layoutY="354.0" mnemonicParsing="false" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="79.0" text="Login" />
       <Label layoutX="20.0" layoutY="200.0" text="From Date:" />
       <DatePicker fx:id="fromDatePicker" layoutX="20.0" layoutY="223.0" />
       <Label layoutX="222.0" layoutY="200.0" text="To Date:" />
       <DatePicker fx:id="toDatePicker" layoutX="222.0" layoutY="223.0" />
+      <ProgressBar fx:id="progressBar" layoutX="94.0" layoutY="297.0" prefWidth="200.0" progress="0.0" visible="false" />
+      <ProgressIndicator fx:id="progressIndicator" layoutX="296.0" layoutY="277.0" prefHeight="40.0" prefWidth="79.0" progress="0.0" visible="false" />
+      <Label fx:id="errorLabel" layoutX="114.0" layoutY="289.0" text="Error in retrieving data" textFill="RED" visible="false" />
    </children>
 </AnchorPane>
