--- a/src/application/DisplayDataScene.fxml
+++ b/src/application/DisplayDataScene.fxml
@@ -45,5 +45,6 @@
       <Label layoutX="26.0" layoutY="188.0" prefHeight="17.0" prefWidth="72.0" text="Day of Week:" />
       <Label layoutX="342.0" layoutY="188.0" prefHeight="17.0" prefWidth="111.0" text="Shift Occurences:" />
       <Label layoutX="333.0" layoutY="33.0" prefHeight="17.0" prefWidth="72.0" text="Bookers:" />
+      <Button layoutX="467.0" layoutY="550.0" mnemonicParsing="false" onAction="#btnCalendarClicked" text="Go to Calendar" />
    </children>
 </AnchorPane>
